tests/paczka1/fuzzy1/52995622.err
Error in line 2: mncB4dEf9kJ S163 3,7
Error in line 9: ng2nk9l A926 85,8
Error in line 22: 86O4N0YW5B7 S419 37,1
